[package]
name = "starlight-bot"
version = "0.1.0"
authors = ["Ash B <ash.b.7558@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# JSON + config thingies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"

# http client
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }

# async
tokio = { version = "1", features = ["full"] }

# discord
poise = { git = "https://github.com/kangalioo/poise", branch = "develop", features = ["collector"] }

# osu
rosu-v2 = "0.3"

# utils
uuid = { version = "0.8", features = ["serde"] }
thiserror = "1"
chrono = "0.4"

[build-dependencies]
git2 = "0.13"
